Fixed doubled labels in mail compose on mobiles Fixed broken cc/bcc toggle for mobiles

--- a/ui/apps/io.ox/core/tk/tokenfield.less
+++ b/ui/apps/io.ox/core/tk/tokenfield.less
@@ -69,11 +69,19 @@
             min-width: @tokenfield-menu-width;
 
             @media all and (min-width: 320px) and (max-width: 480px) {
-                border-radius: 0;
-                border: 1px solid #fff;
-                border-top-color: #ccc;
+
             }
         }
     }
 }
 
+.smartphone {
+    .tokenfield .twitter-typeahead {
+        & > .token-input.tt-hint, > .token-input.tt-input { min-width: inherit !important; }
+        .tt-dropdown-menu {
+            border-radius: 0;
+            border: 1px solid #fff;
+            border-top-color: #ccc;
+        }
+    }
+}
