--- a/ui/apps/io.ox/mail/compose/style.less
+++ b/ui/apps/io.ox/mail/compose/style.less
@@ -336,6 +336,9 @@
                     width: 90%;
                     margin-right: -5px;
                 }
+                input::-webkit-input-placeholder {
+                    color: #fff;
+                }
             }
             &[data-extension-id=subject] .col-xs-12 { padding-left: 7px; }
 
@@ -344,7 +347,10 @@
                 padding-bottom:4px;
             }
 
-            .maillabel.col-xs-1 { width: 10%; }
+            .maillabel.col-xs-1 {
+                width: 10%;
+            }
+
 
             &.subject {
                 padding-bottom: 6px;
